// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendTransaction View renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        Object {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderBottomColor": "rgb(216, 216, 216)",
                "elevation": 0,
                "flex": 1,
                "shadowColor": "transparent",
                "shadowOffset": Object {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            Object {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "flex-start",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                }
              }
            >
              <TouchableOpacity
                accessibilityRole="button"
                accessible={true}
                onPress={[Function]}
                style={
                  Object {
                    "paddingHorizontal": 18,
                    "paddingVertical": 8,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#0376C9",
                      "fontFamily": "EuclidCircularB-Regular",
                      "fontSize": 23.57142857142857,
                      "fontWeight": "400",
                    }
                  }
                >
                  Back
                </Text>
              </TouchableOpacity>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "marginHorizontal": 72,
                  "opacity": 1,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={1}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "#24272A",
                      "fontFamily": "EuclidCircularB-Regular",
                      "fontSize": 30,
                      "fontWeight": "400",
                    }
                  }
                >
                  Sell crypto
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "borderRadius": 100,
                          "height": 5,
                          "marginRight": 5,
                          "marginTop": 4,
                          "width": 5,
                        },
                        Object {
                          "backgroundColor": "#3cc29e",
                        },
                      ]
                    }
                  />
                  <Text
                    numberOfLines={1}
                    style={
                      Object {
                        "color": "#535A61",
                        "fontFamily": "EuclidCircularB-Regular",
                        "fontSize": 11,
                        "fontWeight": "400",
                      }
                    }
                  >
                    Ethereum Main Network
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "flex-end",
                  "bottom": 0,
                  "justifyContent": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View />
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        forwardedRef={[Function]}
        gestureResponseDistance={
          Object {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <RCTSafeAreaView
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#FFFFFF",
                              "flex": 1,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "flex": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "padding": 15,
                                },
                                Object {
                                  "flex": 1,
                                },
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flex": 1,
                                  "justifyContent": "center",
                                }
                              }
                            >
                              <View
                                style={
                                  Array [
                                    Object {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    Object {
                                      "color": "#24272A",
                                      "fontFamily": "Euclid Circular B",
                                      "fontSize": 14,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                      "textAlign": "center",
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      Object {
                                        "color": "#24272A",
                                        "fontFamily": "Euclid Circular B",
                                        "fontSize": 18,
                                        "fontWeight": "normal",
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Send
                                     
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      Object {
                                        "color": "#24272A",
                                        "fontFamily": "Euclid Circular B",
                                        "fontSize": 18,
                                        "fontWeight": "700",
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    0.012361263
                                     
                                  </Text>
                                  <View
                                    style={
                                      Object {
                                        "backgroundColor": "#FFFFFF",
                                        "borderRadius": 12,
                                        "height": 24,
                                        "overflow": "hidden",
                                        "width": 24,
                                      }
                                    }
                                  >
                                    <Image
                                      onError={[Function]}
                                      resizeMode="contain"
                                      source={
                                        Object {
                                          "uri": "MockImage",
                                        }
                                      }
                                      style={
                                        Object {
                                          "flex": 1,
                                          "height": undefined,
                                          "width": undefined,
                                        }
                                      }
                                      testID="token-avatar-image"
                                    />
                                  </View>
                                   
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      Object {
                                        "color": "#24272A",
                                        "fontFamily": "Euclid Circular B",
                                        "fontSize": 18,
                                        "fontWeight": "700",
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    ETH
                                  </Text>
                                </Text>
                              </View>
                              <View
                                style={
                                  Array [
                                    Object {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <SvgMock
                                  color="#6A737D"
                                  height={24}
                                  name="Arrow2Down"
                                  style={
                                    Object {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                              </View>
                              <View
                                style={
                                  Array [
                                    Object {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <Image
                                  onError={[Function]}
                                  source={
                                    Object {
                                      "uri": "https://on-ramp.dev-api.cx.metamask.io/assets/providers/test_light.png",
                                    }
                                  }
                                  style={
                                    Object {
                                      "height": 24,
                                      "width": 65,
                                    }
                                  }
                                />
                              </View>
                              <View
                                style={
                                  Array [
                                    Object {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <SvgMock
                                  color="#6A737D"
                                  height={24}
                                  name="Arrow2Down"
                                  style={
                                    Object {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                              </View>
                              <View
                                style={
                                  Array [
                                    Object {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "alignItems": "center",
                                      "columnGap": 4,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                    }
                                  }
                                >
                                  <Text
                                    allowFontScaling={false}
                                    style={
                                      Array [
                                        Object {
                                          "color": "#6A737D",
                                          "fontSize": 20,
                                        },
                                        undefined,
                                        Object {
                                          "fontFamily": "Material Design Icons",
                                          "fontStyle": "normal",
                                          "fontWeight": "normal",
                                        },
                                        Object {},
                                      ]
                                    }
                                  >
                                    
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      Object {
                                        "color": "#24272A",
                                        "fontFamily": "Euclid Circular B",
                                        "fontSize": 18,
                                        "fontWeight": "normal",
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Instant Bank Transfer
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View>
                          <View
                            style={
                              Array [
                                Object {
                                  "padding": 15,
                                },
                                undefined,
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "marginVertical": 8,
                                  },
                                  Object {
                                    "marginTop": 0,
                                  },
                                  undefined,
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  Object {
                                    "color": "#24272A",
                                    "fontFamily": "Euclid Circular B",
                                    "fontSize": 14,
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                    "textAlign": "center",
                                  }
                                }
                              >
                                You will send your ETH to Test (Staging), who then sends your cash to Instant Bank Transfer
                              </Text>
                            </View>
                            <View
                              style={
                                Array [
                                  Object {
                                    "marginVertical": 8,
                                  },
                                  undefined,
                                  undefined,
                                  undefined,
                                ]
                              }
                            >
                              <TouchableOpacity
                                accessibilityRole="button"
                                accessible={true}
                                activeOpacity={1}
                                onPress={[Function]}
                                onPressIn={[Function]}
                                onPressOut={[Function]}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "alignSelf": "stretch",
                                    "backgroundColor": "#0376C9",
                                    "borderRadius": 24,
                                    "flexDirection": "row",
                                    "height": 48,
                                    "justifyContent": "center",
                                    "paddingHorizontal": 16,
                                  }
                                }
                                variant="Primary"
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    Object {
                                      "color": "#FFFFFF",
                                      "fontFamily": "Euclid Circular B",
                                      "fontSize": 16,
                                      "fontWeight": "500",
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  Next
                                </Text>
                              </TouchableOpacity>
                            </View>
                          </View>
                        </View>
                      </View>
                    </RCTSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`SendTransaction View renders correctly for custom action payment method 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        Object {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderBottomColor": "rgb(216, 216, 216)",
                "elevation": 0,
                "flex": 1,
                "shadowColor": "transparent",
                "shadowOffset": Object {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            Object {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "flex-start",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                }
              }
            >
              <TouchableOpacity
                accessibilityRole="button"
                accessible={true}
                onPress={[Function]}
                style={
                  Object {
                    "paddingHorizontal": 18,
                    "paddingVertical": 8,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#0376C9",
                      "fontFamily": "EuclidCircularB-Regular",
                      "fontSize": 23.57142857142857,
                      "fontWeight": "400",
                    }
                  }
                >
                  Back
                </Text>
              </TouchableOpacity>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "marginHorizontal": 72,
                  "opacity": 1,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={1}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "#24272A",
                      "fontFamily": "EuclidCircularB-Regular",
                      "fontSize": 30,
                      "fontWeight": "400",
                    }
                  }
                >
                  Sell crypto
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "borderRadius": 100,
                          "height": 5,
                          "marginRight": 5,
                          "marginTop": 4,
                          "width": 5,
                        },
                        Object {
                          "backgroundColor": "#3cc29e",
                        },
                      ]
                    }
                  />
                  <Text
                    numberOfLines={1}
                    style={
                      Object {
                        "color": "#535A61",
                        "fontFamily": "EuclidCircularB-Regular",
                        "fontSize": 11,
                        "fontWeight": "400",
                      }
                    }
                  >
                    Ethereum Main Network
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "flex-end",
                  "bottom": 0,
                  "justifyContent": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View />
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        forwardedRef={[Function]}
        gestureResponseDistance={
          Object {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <RCTSafeAreaView
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#FFFFFF",
                              "flex": 1,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "flex": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "padding": 15,
                                },
                                Object {
                                  "flex": 1,
                                },
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flex": 1,
                                  "justifyContent": "center",
                                }
                              }
                            >
                              <View
                                style={
                                  Array [
                                    Object {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    Object {
                                      "color": "#24272A",
                                      "fontFamily": "Euclid Circular B",
                                      "fontSize": 14,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                      "textAlign": "center",
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      Object {
                                        "color": "#24272A",
                                        "fontFamily": "Euclid Circular B",
                                        "fontSize": 18,
                                        "fontWeight": "normal",
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Send
                                     
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      Object {
                                        "color": "#24272A",
                                        "fontFamily": "Euclid Circular B",
                                        "fontSize": 18,
                                        "fontWeight": "700",
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    0.0123456
                                     
                                  </Text>
                                  <View
                                    style={
                                      Object {
                                        "backgroundColor": "#FFFFFF",
                                        "borderRadius": 12,
                                        "height": 24,
                                        "overflow": "hidden",
                                        "width": 24,
                                      }
                                    }
                                  >
                                    <Image
                                      onError={[Function]}
                                      resizeMode="contain"
                                      source={
                                        Object {
                                          "uri": "https://token.metaswap.codefi.network/assets/nativeCurrencyLogos/usdc.png",
                                        }
                                      }
                                      style={
                                        Object {
                                          "flex": 1,
                                          "height": undefined,
                                          "width": undefined,
                                        }
                                      }
                                      testID="token-avatar-image"
                                    />
                                  </View>
                                   
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      Object {
                                        "color": "#24272A",
                                        "fontFamily": "Euclid Circular B",
                                        "fontSize": 18,
                                        "fontWeight": "700",
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    USDC
                                  </Text>
                                </Text>
                              </View>
                              <View
                                style={
                                  Array [
                                    Object {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <SvgMock
                                  color="#6A737D"
                                  height={24}
                                  name="Arrow2Down"
                                  style={
                                    Object {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                              </View>
                              <View
                                style={
                                  Array [
                                    Object {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <Image
                                  onError={[Function]}
                                  source={
                                    Object {
                                      "uri": "https://on-ramp.dev-api.cx.metamask.io/assets/providers/test_light.png",
                                    }
                                  }
                                  style={
                                    Object {
                                      "height": 24,
                                      "width": 65,
                                    }
                                  }
                                />
                              </View>
                            </View>
                          </View>
                        </View>
                        <View>
                          <View
                            style={
                              Array [
                                Object {
                                  "padding": 15,
                                },
                                undefined,
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "marginVertical": 8,
                                  },
                                  Object {
                                    "marginTop": 0,
                                  },
                                  undefined,
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  Object {
                                    "color": "#24272A",
                                    "fontFamily": "Euclid Circular B",
                                    "fontSize": 14,
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                    "textAlign": "center",
                                  }
                                }
                              >
                                You will send your USDC to Test (Staging), who then sends your cash to Instant Bank Transfer
                              </Text>
                            </View>
                            <View
                              style={
                                Array [
                                  Object {
                                    "marginVertical": 8,
                                  },
                                  undefined,
                                  undefined,
                                  undefined,
                                ]
                              }
                            >
                              <TouchableOpacity
                                accessibilityRole="button"
                                accessible={true}
                                activeOpacity={1}
                                onPress={[Function]}
                                onPressIn={[Function]}
                                onPressOut={[Function]}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "alignSelf": "stretch",
                                    "backgroundColor": "#0376C9",
                                    "borderRadius": 24,
                                    "flexDirection": "row",
                                    "height": 48,
                                    "justifyContent": "center",
                                    "paddingHorizontal": 16,
                                  }
                                }
                                variant="Primary"
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    Object {
                                      "color": "#FFFFFF",
                                      "fontFamily": "Euclid Circular B",
                                      "fontSize": 16,
                                      "fontWeight": "500",
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  Next
                                </Text>
                              </TouchableOpacity>
                            </View>
                          </View>
                        </View>
                      </View>
                    </RCTSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`SendTransaction View renders correctly for token 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        Object {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderBottomColor": "rgb(216, 216, 216)",
                "elevation": 0,
                "flex": 1,
                "shadowColor": "transparent",
                "shadowOffset": Object {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            Object {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "flex-start",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                }
              }
            >
              <TouchableOpacity
                accessibilityRole="button"
                accessible={true}
                onPress={[Function]}
                style={
                  Object {
                    "paddingHorizontal": 18,
                    "paddingVertical": 8,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#0376C9",
                      "fontFamily": "EuclidCircularB-Regular",
                      "fontSize": 23.57142857142857,
                      "fontWeight": "400",
                    }
                  }
                >
                  Back
                </Text>
              </TouchableOpacity>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "marginHorizontal": 72,
                  "opacity": 1,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={1}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "#24272A",
                      "fontFamily": "EuclidCircularB-Regular",
                      "fontSize": 30,
                      "fontWeight": "400",
                    }
                  }
                >
                  Sell crypto
                </Text>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "borderRadius": 100,
                          "height": 5,
                          "marginRight": 5,
                          "marginTop": 4,
                          "width": 5,
                        },
                        Object {
                          "backgroundColor": "#3cc29e",
                        },
                      ]
                    }
                  />
                  <Text
                    numberOfLines={1}
                    style={
                      Object {
                        "color": "#535A61",
                        "fontFamily": "EuclidCircularB-Regular",
                        "fontSize": 11,
                        "fontWeight": "400",
                      }
                    }
                  >
                    Ethereum Main Network
                  </Text>
                </View>
              </TouchableOpacity>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                Object {
                  "alignItems": "flex-end",
                  "bottom": 0,
                  "justifyContent": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
            >
              <View />
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        forwardedRef={[Function]}
        gestureResponseDistance={
          Object {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <RCTSafeAreaView
                      style={
                        Object {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "backgroundColor": "#FFFFFF",
                              "flex": 1,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "flex": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "padding": 15,
                                },
                                Object {
                                  "flex": 1,
                                },
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "center",
                                  "flex": 1,
                                  "justifyContent": "center",
                                }
                              }
                            >
                              <View
                                style={
                                  Array [
                                    Object {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    Object {
                                      "color": "#24272A",
                                      "fontFamily": "Euclid Circular B",
                                      "fontSize": 14,
                                      "fontWeight": "400",
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                      "textAlign": "center",
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      Object {
                                        "color": "#24272A",
                                        "fontFamily": "Euclid Circular B",
                                        "fontSize": 18,
                                        "fontWeight": "normal",
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Send
                                     
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      Object {
                                        "color": "#24272A",
                                        "fontFamily": "Euclid Circular B",
                                        "fontSize": 18,
                                        "fontWeight": "700",
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    0.0123456
                                     
                                  </Text>
                                  <View
                                    style={
                                      Object {
                                        "backgroundColor": "#FFFFFF",
                                        "borderRadius": 12,
                                        "height": 24,
                                        "overflow": "hidden",
                                        "width": 24,
                                      }
                                    }
                                  >
                                    <Image
                                      onError={[Function]}
                                      resizeMode="contain"
                                      source={
                                        Object {
                                          "uri": "https://token.metaswap.codefi.network/assets/nativeCurrencyLogos/usdc.png",
                                        }
                                      }
                                      style={
                                        Object {
                                          "flex": 1,
                                          "height": undefined,
                                          "width": undefined,
                                        }
                                      }
                                      testID="token-avatar-image"
                                    />
                                  </View>
                                   
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      Object {
                                        "color": "#24272A",
                                        "fontFamily": "Euclid Circular B",
                                        "fontSize": 18,
                                        "fontWeight": "700",
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    USDC
                                  </Text>
                                </Text>
                              </View>
                              <View
                                style={
                                  Array [
                                    Object {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <SvgMock
                                  color="#6A737D"
                                  height={24}
                                  name="Arrow2Down"
                                  style={
                                    Object {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                              </View>
                              <View
                                style={
                                  Array [
                                    Object {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <Image
                                  onError={[Function]}
                                  source={
                                    Object {
                                      "uri": "https://on-ramp.dev-api.cx.metamask.io/assets/providers/test_light.png",
                                    }
                                  }
                                  style={
                                    Object {
                                      "height": 24,
                                      "width": 65,
                                    }
                                  }
                                />
                              </View>
                              <View
                                style={
                                  Array [
                                    Object {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <SvgMock
                                  color="#6A737D"
                                  height={24}
                                  name="Arrow2Down"
                                  style={
                                    Object {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                              </View>
                              <View
                                style={
                                  Array [
                                    Object {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "alignItems": "center",
                                      "columnGap": 4,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                    }
                                  }
                                >
                                  <Text
                                    allowFontScaling={false}
                                    style={
                                      Array [
                                        Object {
                                          "color": "#6A737D",
                                          "fontSize": 20,
                                        },
                                        undefined,
                                        Object {
                                          "fontFamily": "Material Design Icons",
                                          "fontStyle": "normal",
                                          "fontWeight": "normal",
                                        },
                                        Object {},
                                      ]
                                    }
                                  >
                                    
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      Object {
                                        "color": "#24272A",
                                        "fontFamily": "Euclid Circular B",
                                        "fontSize": 18,
                                        "fontWeight": "normal",
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Instant Bank Transfer
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View>
                          <View
                            style={
                              Array [
                                Object {
                                  "padding": 15,
                                },
                                undefined,
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "marginVertical": 8,
                                  },
                                  Object {
                                    "marginTop": 0,
                                  },
                                  undefined,
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  Object {
                                    "color": "#24272A",
                                    "fontFamily": "Euclid Circular B",
                                    "fontSize": 14,
                                    "fontWeight": "400",
                                    "letterSpacing": 0,
                                    "lineHeight": 22,
                                    "textAlign": "center",
                                  }
                                }
                              >
                                You will send your USDC to Test (Staging), who then sends your cash to Instant Bank Transfer
                              </Text>
                            </View>
                            <View
                              style={
                                Array [
                                  Object {
                                    "marginVertical": 8,
                                  },
                                  undefined,
                                  undefined,
                                  undefined,
                                ]
                              }
                            >
                              <TouchableOpacity
                                accessibilityRole="button"
                                accessible={true}
                                activeOpacity={1}
                                onPress={[Function]}
                                onPressIn={[Function]}
                                onPressOut={[Function]}
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "alignSelf": "stretch",
                                    "backgroundColor": "#0376C9",
                                    "borderRadius": 24,
                                    "flexDirection": "row",
                                    "height": 48,
                                    "justifyContent": "center",
                                    "paddingHorizontal": 16,
                                  }
                                }
                                variant="Primary"
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    Object {
                                      "color": "#FFFFFF",
                                      "fontFamily": "Euclid Circular B",
                                      "fontSize": 16,
                                      "fontWeight": "500",
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  Next
                                </Text>
                              </TouchableOpacity>
                            </View>
                          </View>
                        </View>
                      </View>
                    </RCTSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;
